tests/paczka1/small_fuzzy/94078069.err
Error in line 1: Vj4q4gguUI A952 579,1
Error in line 3: IsXmwkj9 S726 56,2
